Fixed responsive issues

--- a/appointment.html
+++ b/appointment.html
@@ -50,6 +50,11 @@
                 </ul>
             </nav>
             <a href="appointment.html" class="cta-btn" style="background: var(--red-dark);">Make An Appointment</a>
+                    <button class="mobile-menu-btn" aria-label="Toggle menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </div>
     </header>
 
