--- a/foundation.html
+++ b/foundation.html
@@ -50,6 +50,11 @@
                 </ul>
             </nav>
             <a href="appointment.html" class="cta-btn">Make An Appointment</a>
+                    <button class="mobile-menu-btn" aria-label="Toggle menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </div>
     </header>
 
