--- a/foundation.html
+++ b/foundation.html
@@ -45,6 +45,7 @@
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="foundation.html" style="color: var(--red-primary);">The ECI Foundation</a></li>
                     <li><a href="services.html">Services</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="blog.html">Blog</a></li>
                 </ul>
@@ -189,35 +190,6 @@
         </div>
     </section>
 
-    <!-- Get Involved Section -->
-    <section style="padding: 120px 40px; background: var(--warm-white);">
-        <div style="max-width: 1200px; margin: 0 auto;">
-            <div style="text-align: center; margin-bottom: 60px;">
-                <h2 style="font-size: 3.5rem; margin-bottom: 20px;">Get Involved</h2>
-                <p style="color: var(--text-muted); font-size: 1.2rem;">Join us in making a difference in our community</p>
-            </div>
-            <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 40px;">
-                <div style="background: white; padding: 50px; border-radius: 25px; text-align: center; box-shadow: 0 20px 60px rgba(0, 0, 0, 0.08);">
-                    <div style="width: 90px; height: 90px; background: var(--rose-blush); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 25px; font-size: 3rem;">🎁</div>
-                    <h3 style="font-size: 1.8rem; margin-bottom: 15px;">Donate</h3>
-                    <p style="color: var(--text-muted); line-height: 1.8; margin-bottom: 25px;">Your financial contribution helps us expand our programs and reach more people in need.</p>
-                    <a href="contact.html" class="cta-btn">Make a Donation</a>
-                </div>
-                <div style="background: white; padding: 50px; border-radius: 25px; text-align: center; box-shadow: 0 20px 60px rgba(0, 0, 0, 0.08);">
-                    <div style="width: 90px; height: 90px; background: var(--sky-soft); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 25px; font-size: 3rem;">🙋</div>
-                    <h3 style="font-size: 1.8rem; margin-bottom: 15px;">Volunteer</h3>
-                    <p style="color: var(--text-muted); line-height: 1.8; margin-bottom: 25px;">Share your time and talents to make a direct impact in the lives of those we serve.</p>
-                    <a href="contact.html" class="cta-btn">Volunteer With Us</a>
-                </div>
-                <div style="background: white; padding: 50px; border-radius: 25px; text-align: center; box-shadow: 0 20px 60px rgba(0, 0, 0, 0.08);">
-                    <div style="width: 90px; height: 90px; background: var(--rose-blush); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 25px; font-size: 3rem;">🤝</div>
-                    <h3 style="font-size: 1.8rem; margin-bottom: 15px;">Partner</h3>
-                    <p style="color: var(--text-muted); line-height: 1.8; margin-bottom: 25px;">Organizations and businesses can partner with us to amplify our collective impact.</p>
-                    <a href="contact.html" class="cta-btn">Become a Partner</a>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- Footer -->
     <footer style="background: var(--text-dark); color: white; padding: 80px 40px 30px;">
