--- a/about.html
+++ b/about.html
@@ -45,6 +45,7 @@
                     <li><a href="about.html" style="color: var(--red-primary);">About Us</a></li>
                     <li><a href="foundation.html">The ECI Foundation</a></li>
                     <li><a href="services.html">Services</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="blog.html">Blog</a></li>
                 </ul>
