--- a/blog.html
+++ b/blog.html
@@ -45,6 +45,7 @@
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="foundation.html">The ECI Foundation</a></li>
                     <li><a href="services.html">Services</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="blog.html" style="color: var(--red-primary);">Blog</a></li>
                 </ul>
@@ -208,11 +209,42 @@
     <script src="assets/js/main.js"></script>
     <script>
         // Newsletter form submission
-        document.getElementById('newsletterForm').addEventListener('submit', function(e) {
+        document.getElementById('newsletterForm').addEventListener('submit', async function(e) {
             e.preventDefault();
-            // TODO: Integrate with email service or API
-            alert('Thank you for subscribing! We will send you updates on fertility and reproductive health.');
-            this.reset();
+
+            const submitBtn = this.querySelector('button[type="submit"]');
+            const originalBtnText = submitBtn.textContent;
+            submitBtn.disabled = true;
+            submitBtn.textContent = 'Subscribing...';
+
+            const formData = {
+                email: this.querySelector('[name="email"]').value
+            };
+
+            try {
+                const response = await fetch('https://us-central1-emobile-7372c.cloudfunctions.net/subscribeNewsletter', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(formData)
+                });
+
+                const result = await response.json();
+
+                if (response.ok) {
+                    alert(result.message);
+                    this.reset();
+                } else {
+                    alert(result.error || 'Failed to subscribe. Please try again.');
+                }
+            } catch (error) {
+                console.error('Newsletter subscription error:', error);
+                alert('Network error. Please check your connection and try again.');
+            } finally {
+                submitBtn.disabled = false;
+                submitBtn.textContent = originalBtnText;
+            }
         });
 
         // API Integration Function (for future use)
