--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="foundation.html">The ECI Foundation</a></li>
                     <li><a href="services.html">Services</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="blog.html">Blog</a></li>
                 </ul>
@@ -362,12 +363,50 @@
 
     <script src="assets/js/main.js"></script>
     <script>
-        // Contact form submission (placeholder for API integration)
-        document.getElementById('contactForm').addEventListener('submit', function(e) {
+        // Contact form submission
+        document.getElementById('contactForm').addEventListener('submit', async function(e) {
             e.preventDefault();
-            // TODO: Integrate with REST API endpoint /api/contact
-            alert('Thank you for contacting us! We will get back to you soon.');
-            this.reset();
+
+            const submitBtn = this.querySelector('button[type="submit"]');
+            const originalBtnText = submitBtn.textContent;
+            submitBtn.disabled = true;
+            submitBtn.textContent = 'Sending...';
+
+            // Collect form data
+            const formData = {
+                firstName: this.querySelector('[name="firstName"]').value,
+                lastName: this.querySelector('[name="lastName"]').value,
+                email: this.querySelector('[name="email"]').value,
+                phone: this.querySelector('[name="phone"]').value,
+                subject: this.querySelector('[name="subject"]').value,
+                service: this.querySelector('[name="service"]')?.value || '',
+                message: this.querySelector('[name="message"]').value
+            };
+
+            try {
+                const response = await fetch('https://us-central1-emobile-7372c.cloudfunctions.net/submitContactForm', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(formData)
+                });
+
+                const result = await response.json();
+
+                if (response.ok) {
+                    alert(result.message);
+                    this.reset();
+                } else {
+                    alert(result.error || 'Failed to send message. Please try again.');
+                }
+            } catch (error) {
+                console.error('Form submission error:', error);
+                alert('Network error. Please check your connection and try again.');
+            } finally {
+                submitBtn.disabled = false;
+                submitBtn.textContent = originalBtnText;
+            }
         });
     </script>
 </body>
