--- a/services.html
+++ b/services.html
@@ -45,6 +45,7 @@
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="foundation.html">The ECI Foundation</a></li>
                     <li><a href="services.html" style="color: var(--red-primary);">Services</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="blog.html">Blog</a></li>
                 </ul>
